[package]
name = "release-date-sorterer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.84"
axum = { version = "0.8.1", features = ["macros"] }
axum-test = "16.4.1"
chrono = { version = "0.4.39", features = ["serde"] }
regex = "1.11.1"
reqwest = { version = "0.13.0", default-features = false, features = [
    "blocking",
    "gzip",
    "rustls",
] }
scraper = "0.25.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
sqlx = { version = "0.8.3", features = [
    "chrono",
    "postgres",
    "runtime-tokio",
    "uuid",
] }
time = "0.3.37"
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.11.0", features = ["v4", "fast-rng", "serde"] }
